Fixed blank space bug on Firefox.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,7 +7,7 @@ $piggy: #eb4e7a;
   padding: 0;
   margin: 0;
   font-family: 'PT Sans Narrow', sans-serif;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 ::-moz-selection { 
@@ -187,7 +187,6 @@ body {
 .techstackWrapper {
   text-decoration: none;
   height: 100%;
-  display: flex;
   align-items: left;
   justify-content: left;
   margin-bottom: 1rem;
